# Crypto-Multifactor-Bot

./: .gitignore  AGENTS.md  MERGE_NOTES.md  README.md  REPO_PATCH_001.md  opencode.json  pyproject.toml
.local/: control.db
.stale/: BAR-001_CHANGE_REPORT.stale_2ee73f4.md
configs/: sources.example.yaml  storage.example.yaml
crypto_multifactor_research_sprint_v1_1/: 02_DATA_AUDIT_PLAN.md  03_POINT_IN_TIME_DATA_CONTRACT.md  07_COST_AND_PORTFOLIO_PROTOCOL.md  08_VOLUME_BAR_REPLICATION_PROTOCOL.md  11_LITERATURE_SYNTHESIS.md  12_ARCHITECTURE_HANDOFF.md  13_OPEN_QUESTIONS_AND_LOCAL_HANDOFF.md  CHANGELOG.md  PACKAGE.sha256  PACKAGE_MANIFEST.json  README.md
docs/: ARCHITECTURE_RFC.md
prompts/: ASOF-001_HERMES_INTEGRATION.txt  EXP-001_HERMES_INTEGRATION.txt  EXP-001_SR_CORRECTION_PROMPT.md
research/: bug_sweep_20260722.md
schemas/: dataset_manifest.schema.json  evidence_item.schema.json  evidence_snapshot.schema.json  factor_value.schema.json  hypothesis.schema.json  hypothesis_decision.schema.json  hypothesis_evidence_link.schema.json  instrument_record.schema.json  label_return.schema.json  model_manifest.schema.json  raw_object_manifest.schema.json
scripts/: check_layer_imports.py  check_repo_control.py  promote_and_run_paper.py  run_momts_experiments.py  run_paper_momts.py  validate_handoff_assets.py
source_audit/: download.py  hashing.py  models.py  serialization.py  timestamps.py
sql/: analytics_views.sql  control_schema.sql
tests/: test_archives.py  test_archives_timestamps.py  test_audit_runner_sprint003.py  test_bars.py  test_baseline_factors.py  test_binance_precision.py  test_check_repo_control.py  test_composite_factors.py  test_dataset_manifest.py  test_download_atomicity.py  test_ids.py  test_layer_contract.py  test_ml_factors.py  test_null_factor.py  test_pagination.py  test_raw_object_writer.py  test_serialization.py  test_storage.py  test_timestamps.py
tickets/: ALLOC-001.md  ARCH-001.md  ASOF-001.md  ASOF-002.md  AUD-001.md  AUD-002.md  AUD-003.md  AUD-004.md  AUD-005.md  AUD-006.md  BAR-001.md  BASE-001.md  BIN-001.md  BYB-001.md  CAT-001.md  (+75 more)
(+727 files in other folders)
