[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-multifactor-bot"
version = "0.1.0"
description = "Point-in-time cryptocurrency multifactor research platform"
requires-python = ">=3.12,<3.14"
dependencies = [
  "duckdb",
  "httpx",
  "polars",
  "pyarrow",
  "pydantic>=2",
  "pyyaml",
  "tenacity",
  "typer",
]

[project.optional-dependencies]
research = ["matplotlib", "numpy", "scikit-learn", "scipy", "statsmodels"]
ml = ["xgboost"]
dev = ["hypothesis", "mypy", "pytest", "ruff"]

[project.scripts]
cf = "cryptofactors.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptofactors", "src/source_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
